re PR target/60604 (GCC incorrectly compiles s_csinh function on MIPS32 (32bit fp))

gcc/
	PR rtl-optimization/60604
	* recog.c (general_operand): Incorporate REG_CANNOT_CHANGE_MODE_P
	check from register_operand.
	(register_operand): Redefine in terms of general_operand.
	(nonmemory_operand): Use register_operand for the non-constant cases.

From-SVN: r208984